openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portfolio
  labels:
    app: portfolio
    app.kubernetes.io/component: portfolio
    app.kubernetes.io/instance: portfolio
    app.kubernetes.io/name: portfolio
spec:
  host: portfolio.apps.test.mtnn.cloud
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: portfolio
    weight: 100
  wildcardPolicy: None
